Get the game working

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Rock Paper Scissors</title>
         <meta charset="UTF-8">
 
-        <link href="normalize.css" type="text/css" rel="stylesheet">
+        <link href="reset.css" type="text/css" rel="stylesheet">
         <link href="style.css" type="text/css" rel="stylesheet">
     </head>
     
@@ -22,7 +22,7 @@
 
         <div class = "results">
             <h3>Score</h3>
-            <p><span id="status">Status</span>Result of the Current Round will appear here</p>
+            <p id = "status"><span>Status</span>Result of the Current Round will appear here</p>
 
             <table>
                 <tr>
@@ -43,13 +43,13 @@
                 </tr>
             </table>
 
-            <p><span id="final_result">Final Result</span>Keep on Playing...</p>
+            <p id="final_result"><span>Final Result</span>Keep on Playing...</p>
         </div>
 
         <footer>
             <p>A Game By Purva</p>
             <p>For The Odin Project!</p>
-        <footer>
+        </footer>
 
         <script type="text/javascript" src="./script.js"></script>
     </body>
