Improve Status Box Design and Background

--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@
             </div>
 
             <div class = "results">
-                <h3>Score</h3>
-                <p id = "status"><span>Status</span>Result of the Current Round will appear here</p>
+                <table>
+                    <tr>
+                        <th scope = "row">Status</th>
+                        <td id = "status">Result of the Current Round will appear here</td>
+                    </tr>
+                </table>
+                
 
                 <table>
                     <tr>
@@ -44,7 +49,12 @@
                     </tr>
                 </table>
 
-                <p id="final_result"><span>Final Result</span>Keep on Playing...</p>
+                <table>
+                    <tr>
+                        <th scope="row">Final Result</th>
+                        <td id = "final_result">Keep on Playing...</td>
+                    </tr>
+                </table>
             </div>
         </div>
         <footer>
