--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
                     </tr>
                 </table>
             </div>
+
+            <button id = "reset">Reset Game</button>
         </div>
         <footer>
             <p>A Game By Purva</p>
