Fix button and table width

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class = "results">
                 <table>
                     <tr>
-                        <th scope = "row">Status</th>
+                        <th scope = "row" class = "status_th">Status</th>
                         <td id = "status">Result of the Current Round will appear here</td>
                     </tr>
                 </table>
@@ -51,7 +51,7 @@
 
                 <table>
                     <tr>
-                        <th scope="row">Final Result</th>
+                        <th scope="row" class = "status_th">Final Result</th>
                         <td id = "final_result">Keep on Playing...</td>
                     </tr>
                 </table>
