--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>Rock Paper Scissors</title>
         <meta charset="UTF-8">
 
-        <link href="reset.css" type="text/css" rel="stylesheet">
-        <link href="style.css" type="text/css" rel="stylesheet">
+        <link href="resources/reset.css" type="text/css" rel="stylesheet">
+        <link href="resources/style.css" type="text/css" rel="stylesheet">
     </head>
     
     <body>
@@ -64,6 +64,6 @@
             <p>For The Odin Project!</p>
         </footer>
 
-        <script type="text/javascript" src="./script.js"></script>
+        <script type="text/javascript" src="resources/script.js"></script>
     </body>
 </html>
